--- a/item_knn.ipynb
+++ b/item_knn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,11 @@
     "from scipy import sparse\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.neighbors import NearestNeighbors\n",
     "\n",
     "#df_ratings = pd.read_csv('ml-20m/ratings.csv', skiprows=[0], names=[\"user_id\", \"movie_id\", \"rating\", \"timestamp\"]).drop(columns=['timestamp']).head(1000000)\n",
     "df_ratings = pd.read_csv('ml-1m/ratings.dat', names=[\"user_id\", \"movie_id\", \"rating\", \"timestamp\"],\n",
     "            header=None, sep='::', engine='python')\n",
-    "matrix_df = df_ratings.pivot(index='movie_id', columns='user_id', values='rating').fillna(0)\n",
+    "matrix_df = df_ratings.pivot(index='movie_id', columns='user_id', values='rating').fillna(0).astype(bool).astype(int)\n",
     "\n",
     "#idx to id and reverse dicts\n",
     "c=0\n",
@@ -33,13 +32,24 @@
     "#make validation movies unrated\n",
     "for index, row in validation_movies.items():\n",
     "    matrix_df[index][row] = 0\n",
+    "\n",
+    "#get second nonzero elements for validation\n",
+    "validation_movies2 = matrix_df.ne(0).idxmax()\n",
+    "\n",
+    "#make validation movies rated\n",
+    "for index, row in validation_movies.items():\n",
+    "    matrix_df[index][row] = 1\n",
+    "\n",
+    "#make validation movies2 unrated\n",
+    "for index, row in validation_movies2.items():\n",
+    "    matrix_df[index][row] = 0\n",
     "    \n",
     "um_matrix = scipy.sparse.csr_matrix(matrix_df.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,36 +62,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import NearestNeighbors\n",
     "# knn model\n",
-    "model_knn = NearestNeighbors(metric='cosine', algorithm='brute', n_neighbors=10, n_jobs=-1)\n",
-    "model_knn.fit(um_matrix)"
+    "model_knn = NearestNeighbors(metric='cosine', algorithm='brute', n_neighbors=17, n_jobs=-1)\n",
+    "model_knn.fit(um_matrix)\n",
+    "\n",
+    "distances, indices = model_knn.kneighbors(um_matrix, n_neighbors=len(matrix_df))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "#for each user get average distance of the movies that user rated to retrieve top k movies to recommend\n",
     "avg_dict = {}\n",
-    "for index, user in enumerate(user_hists[:100]):\n",
+    "for index, user in enumerate(user_hists):\n",
     "    user_dict={}\n",
     "    for movie in user:\n",
-    "        distances, indices = model_knn.kneighbors(um_matrix[int(movie)], n_neighbors=len(matrix_df))\n",
-    "        distances = distances.squeeze().tolist()\n",
-    "        indices = indices.squeeze().tolist()\n",
-    "        for idx, i in enumerate(indices):\n",
+    "        distances_user = distances[movie].squeeze().tolist()\n",
+    "        indices_user = indices[movie].squeeze().tolist()\n",
+    "        for idx, i in enumerate(indices_user):\n",
     "            if i not in user_dict:\n",
-    "                user_dict[i]=distances[idx]\n",
+    "                user_dict[i]=distances_user[idx]\n",
     "            else:\n",
-    "                user_dict[i]+=distances[idx]\n",
-    "    avg_dict[index]=dict(sorted(user_dict.items(), key=lambda x: x[1]))\n",
+    "                user_dict[i]+=distances_user[idx]\n",
+    "    avg_dict[index]=dict(sorted(user_dict.items(), key=lambda x: x[1], reverse=False))\n",
     "    for m in user_hists[index]:\n",
     "        del avg_dict[index][m]\n",
     "    avg_dict[index] = {k: avg_dict[index][k] for k in list(avg_dict[index])[:10]}"
@@ -89,21 +100,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "657\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.10877483443708609"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "recall = 0\n",
     "for user in avg_dict:\n",
-    "    if reverse_hashmap[validation_movies[user+1]] in avg_dict[user]: \n",
+    "    if reverse_hashmap[validation_movies2[user+1]] in avg_dict[user]: \n",
     "        recall+=1\n",
-    "recall=recall/100\n",
+    "print(recall)\n",
+    "recall=recall/len(user_hists)\n",
     "recall"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -140,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +180,7 @@
     "\n",
     "for i in range(0, len(results)):\n",
     "    for x in range(0,len(results[i])):\n",
-    "        if results[i][x]==reverse_hashmap[validation_movies[i+1]]:\n",
+    "        if results[i][x]==reverse_hashmap[validation_movies2[i+1]]:\n",
     "            results[i][x]=1\n",
     "        else:\n",
     "            results[i][x]=0"
@@ -158,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,14 +201,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10877483443708609\n",
+      "0.04489047881845896\n",
+      "0.0691746069526115\n"
+     ]
+    }
+   ],
    "source": [
     "print(recall)\n",
     "print(mrr)\n",
     "print(ndcg)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
