--- a/pysparnn_evaluation.ipynb
+++ b/pysparnn_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,12 @@
     "from scipy import sparse\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.neighbors import NearestNeighbors\n",
+    "import pysparnn.cluster_index as ci\n",
     "\n",
     "#df_ratings = pd.read_csv('ml-20m/ratings.csv', skiprows=[0], names=[\"user_id\", \"movie_id\", \"rating\", \"timestamp\"]).drop(columns=['timestamp']).head(1000000)\n",
     "df_ratings = pd.read_csv('ml-1m/ratings.dat', names=[\"user_id\", \"movie_id\", \"rating\", \"timestamp\"],\n",
     "            header=None, sep='::', engine='python')\n",
-    "matrix_df = df_ratings.pivot(index='movie_id', columns='user_id', values='rating').fillna(0)\n",
+    "matrix_df = df_ratings.pivot(index='movie_id', columns='user_id', values='rating').fillna(0).astype(bool).astype(int)\n",
     "\n",
     "#idx to id and reverse dicts\n",
     "c=0\n",
@@ -33,13 +33,24 @@
     "#make validation movies unrated\n",
     "for index, row in validation_movies.items():\n",
     "    matrix_df[index][row] = 0\n",
+    "\n",
+    "#get second nonzero elements for validation\n",
+    "validation_movies2 = matrix_df.ne(0).idxmax()\n",
+    "\n",
+    "#make validation movies rated\n",
+    "for index, row in validation_movies.items():\n",
+    "    matrix_df[index][row] = 1\n",
+    "\n",
+    "#make validation movies2 unrated\n",
+    "for index, row in validation_movies2.items():\n",
+    "    matrix_df[index][row] = 0\n",
     "    \n",
     "um_matrix = scipy.sparse.csr_matrix(matrix_df.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,24 +63,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pysparnn/matrix_distance.py:192: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  magnitude = 1.0 / (a_root_sum_square * self.matrix_root_sum_square)\n"
+     ]
+    }
+   ],
    "source": [
-    "import pysparnn.cluster_index as ci\n",
-    "\n",
     "doc_index = np.array(range(len(matrix_df)))\n",
     "\n",
-    "snn = ci.MultiClusterIndex(um_matrix, doc_index, num_indexes=100)\n",
+    "snn = ci.MultiClusterIndex(um_matrix, doc_index, num_indexes=10)\n",
     "\n",
-    "results = snn.search(um_matrix, k=len(matrix_df), return_distance=True, num_indexes=100, k_clusters=10)"
+    "results = snn.search(um_matrix, k=len(matrix_df), return_distance=True, num_indexes=10, k_clusters=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -82,13 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "#for each user get average distance of the movies that user rated to retrieve top k movies to recommend\n",
     "avg_dict = {}\n",
-    "for index, user in enumerate(user_hists[:100]):\n",
+    "for index, user in enumerate(user_hists):\n",
     "    user_dict={}    \n",
     "    for movie in user:\n",
     "        for m in results_dic[movie]:\n",
@@ -104,20 +206,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "657\n"
+     ]
+    }
+   ],
    "source": [
     "recall = 0\n",
     "for user in avg_dict:\n",
-    "    if reverse_hashmap[validation_movies[user+1]] in avg_dict[user]: \n",
+    "    if reverse_hashmap[validation_movies2[user+1]] in avg_dict[user]: \n",
     "        recall+=1\n",
-    "recall=recall/100"
+    "print(recall)\n",
+    "recall=recall/len(user_hists)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +268,7 @@
     "\n",
     "for i in range(0, len(results)):\n",
     "    for x in range(0,len(results[i])):\n",
-    "        if results[i][x]==reverse_hashmap[validation_movies[i+1]]:\n",
+    "        if results[i][x]==reverse_hashmap[validation_movies2[i+1]]:\n",
     "            results[i][x]=1\n",
     "        else:\n",
     "            results[i][x]=0"
@@ -165,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,14 +289,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10877483443708609\n",
+      "0.04489047881845896\n",
+      "0.0691746069526115\n"
+     ]
+    }
+   ],
    "source": [
     "print(recall)\n",
     "print(mrr)\n",
     "print(ndcg)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
