--- a/annoy_evaluation.ipynb
+++ b/annoy_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "#df_ratings = pd.read_csv('ml-20m/ratings.csv', skiprows=[0], names=[\"user_id\", \"movie_id\", \"rating\", \"timestamp\"]).drop(columns=['timestamp']).head(1000000)\n",
-    "df_ratings = pd.read_csv('ml-1m/ratings.dat', names=[\"user_id\", \"movie_id\", \"rating\", \"timestamp\"],\n",
+    "#df_ratings = pd.read_csv('ml-20m/ratings.csv', skiprows=[0], names=[\"user_id\", \"movie_id\", \"rating\", \"timestamp\"]).drop(columns=['timestamp']).head(10000000)\n",
+    "df_ratings = pd.read_csv('ml-10m/ratings.dat', names=[\"user_id\", \"movie_id\", \"rating\", \"timestamp\"],\n",
     "            header=None, sep='::', engine='python')\n",
     "matrix_df = df_ratings.pivot(index='movie_id', columns='user_id', values='rating').fillna(0).astype(bool).astype(int)\n",
     "\n",
@@ -29,27 +29,20 @@
     "#get first nonzero elements for validation\n",
     "validation_movies = matrix_df.ne(0).idxmax()\n",
     "\n",
+    "import random\n",
+    "for col in matrix_df:\n",
+    "    validation_movies[col]=random.choice(matrix_df[col].to_numpy().nonzero()[0])\n",
+    "\n",
     "#make validation movies unrated\n",
     "for index, row in validation_movies.items():\n",
-    "    matrix_df[index][row] = 0\n",
-    "\n",
-    "#get second nonzero elements for validation\n",
-    "validation_movies2 = matrix_df.ne(0).idxmax()\n",
-    "\n",
-    "#make validation movies rated\n",
-    "for index, row in validation_movies.items():\n",
-    "    matrix_df[index][row] = 1\n",
-    "\n",
-    "#make validation movies2 unrated\n",
-    "for index, row in validation_movies2.items():\n",
-    "    matrix_df[index][row] = 0\n",
+    "    matrix_df[index][hashmap[row]] = 0\n",
     "    \n",
     "um_matrix = scipy.sparse.csr_matrix(matrix_df.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,27 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3706"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(matrix_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +66,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,72 +87,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "t = AnnoyIndex(f)\n",
+    "t = AnnoyIndex(f, \"angular\")\n",
     "t.load('annoy.ann') # super fast, will just mmap the file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "movie_results = []\n",
+    "for i in range(0, len(matrix_df)):\n",
+    "    indices, distances = t.get_nns_by_item(i, 2, include_distances=True) # will find the all distances\n",
+    "    movie_results.append([indices, distances])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#for each user get average distance of the movies that user rated to retrieve top k movies to recommend\n",
     "avg_dict = {}\n",
-    "for index, user in enumerate(user_hists[:10]):\n",
-    "    print(index)\n",
+    "for index, user in enumerate(user_hists):\n",
     "    user_dict={}\n",
     "    for movie in user:\n",
-    "        indices, distances = t.get_nns_by_item(movie, len(matrix_df), include_distances=True) # will find the all distances\n",
+    "        indices=movie_results[movie][0]\n",
+    "        distances=movie_results[movie][1]\n",
     "        for idx, i in enumerate(indices):\n",
     "            if i not in user_dict:\n",
-    "                user_dict[i]=distances[idx]\n",
+    "                user_dict[i]=1-(((distances[idx]*distances[idx])-2)/-2)\n",
     "            else:\n",
-    "                user_dict[i]+=distances[idx]\n",
-    "    avg_dict[index]=dict(sorted(user_dict.items(), key=lambda x: x[1]))\n",
+    "                user_dict[i]+=1-(((distances[idx]*distances[idx])-2)/-2)\n",
+    "    avg_dict[index]=dict(sorted(user_dict.items(), key=lambda x: x[1], reverse=False))\n",
     "    for m in user_hists[index]:\n",
-    "        del avg_dict[index][m]\n",
+    "        try:\n",
+    "            del avg_dict[index][m]\n",
+    "        except:\n",
+    "            pass\n",
     "    avg_dict[index] = {k: avg_dict[index][k] for k in list(avg_dict[index])[:10]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "504\n"
      ]
     }
    ],
    "source": [
     "recall = 0\n",
     "for user in avg_dict:\n",
-    "    if reverse_hashmap[validation_movies[user+1]] in avg_dict[user]: \n",
+    "    if validation_movies[user+1] in avg_dict[user]: \n",
     "        recall+=1\n",
     "print(recall)\n",
     "recall=recall/len(user_hists)"
@@ -187,27 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "recall"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +214,7 @@
     "\n",
     "for i in range(0, len(results)):\n",
     "    for x in range(0,len(results[i])):\n",
-    "        if results[i][x]==reverse_hashmap[validation_movies[i+1]]:\n",
+    "        if results[i][x]==validation_movies[i+1]:\n",
     "            results[i][x]=1\n",
     "        else:\n",
     "            results[i][x]=0"
@@ -260,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,16 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n",
-      "0.0\n",
-      "0.0\n"
+      "0.08344370860927153\n",
+      "0.029341624618942498\n",
+      "0.048290323201230806\n"
      ]
     }
    ],
