--- a/item_knn.ipynb
+++ b/item_knn.ipynb
@@ -13,7 +13,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "#df_ratings = pd.read_csv('ml-20m/ratings.csv', skiprows=[0], names=[\"user_id\", \"movie_id\", \"rating\", \"timestamp\"]).drop(columns=['timestamp']).head(1000000)\n",
-    "df_ratings = pd.read_csv('ml-1m/ratings.dat', names=[\"user_id\", \"movie_id\", \"rating\", \"timestamp\"],\n",
+    "df_ratings = pd.read_csv('ml-10m/ratings.dat', names=[\"user_id\", \"movie_id\", \"rating\", \"timestamp\"],\n",
     "            header=None, sep='::', engine='python')\n",
     "matrix_df = df_ratings.pivot(index='movie_id', columns='user_id', values='rating').fillna(0).astype(bool).astype(int)\n",
     "\n",
@@ -29,22 +29,31 @@
     "#get first nonzero elements for validation\n",
     "validation_movies = matrix_df.ne(0).idxmax()\n",
     "\n",
+    "import random\n",
+    "for col in matrix_df:\n",
+    "    validation_movies[col]=random.choice(matrix_df[col].to_numpy().nonzero()[0])\n",
+    "\n",
     "#make validation movies unrated\n",
     "for index, row in validation_movies.items():\n",
-    "    matrix_df[index][row] = 0\n",
-    "\n",
-    "#get second nonzero elements for validation\n",
-    "validation_movies2 = matrix_df.ne(0).idxmax()\n",
-    "\n",
-    "#make validation movies rated\n",
-    "for index, row in validation_movies.items():\n",
-    "    matrix_df[index][row] = 1\n",
-    "\n",
-    "#make validation movies2 unrated\n",
-    "for index, row in validation_movies2.items():\n",
-    "    matrix_df[index][row] = 0\n",
+    "    matrix_df[index][hashmap[row]] = 0\n",
     "    \n",
     "um_matrix = scipy.sparse.csr_matrix(matrix_df.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#idx to id and reverse dicts\n",
+    "c=0\n",
+    "user_hashmap = {} \n",
+    "user_reverse_hashmap = {}\n",
+    "for i in list(matrix_df):\n",
+    "    user_hashmap[c] = i\n",
+    "    user_reverse_hashmap[i] = c\n",
+    "    c+=1"
    ]
   },
   {
@@ -62,21 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import NearestNeighbors\n",
     "# knn model\n",
-    "model_knn = NearestNeighbors(metric='cosine', algorithm='brute', n_neighbors=17, n_jobs=-1)\n",
+    "model_knn = NearestNeighbors(metric='cosine', algorithm='brute', n_neighbors=15, n_jobs=-1)\n",
     "model_knn.fit(um_matrix)\n",
     "\n",
-    "distances, indices = model_knn.kneighbors(um_matrix, n_neighbors=len(matrix_df))"
+    "distances, indices = model_knn.kneighbors(um_matrix, n_neighbors=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,29 +103,32 @@
     "                user_dict[i]+=distances_user[idx]\n",
     "    avg_dict[index]=dict(sorted(user_dict.items(), key=lambda x: x[1], reverse=False))\n",
     "    for m in user_hists[index]:\n",
-    "        del avg_dict[index][m]\n",
+    "        try:\n",
+    "            del avg_dict[index][m]\n",
+    "        except:\n",
+    "            pass\n",
     "    avg_dict[index] = {k: avg_dict[index][k] for k in list(avg_dict[index])[:10]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "657\n"
+      "8723\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.10877483443708609"
+       "0.12483184979535762"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +136,7 @@
    "source": [
     "recall = 0\n",
     "for user in avg_dict:\n",
-    "    if reverse_hashmap[validation_movies2[user+1]] in avg_dict[user]: \n",
+    "    if validation_movies[user_hashmap[user]] in avg_dict[user]: \n",
     "        recall+=1\n",
     "print(recall)\n",
     "recall=recall/len(user_hists)\n",
@@ -133,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -170,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +192,7 @@
     "\n",
     "for i in range(0, len(results)):\n",
     "    for x in range(0,len(results[i])):\n",
-    "        if results[i][x]==reverse_hashmap[validation_movies2[i+1]]:\n",
+    "        if results[i][x]==validation_movies[user_hashmap[i]]:\n",
     "            results[i][x]=1\n",
     "        else:\n",
     "            results[i][x]=0"
@@ -188,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,16 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.10877483443708609\n",
-      "0.04489047881845896\n",
-      "0.0691746069526115\n"
+      "0.12483184979535762\n",
+      "0.045648203422109374\n",
+      "0.0742688385285903\n"
      ]
     }
    ],
